Added HW0 Assignment

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Zephram Carroll</h1>
+<p>HW 0.</p>
+<video width="320" height="240" controls>
+	<source src="BoxTurn.mp4" type="video/mp4">
+Your Browser Does Not Support MP4 Video.
+</video>
 </body>
 </html>
