--- a/index.html
+++ b/index.html
@@ -2,13 +2,32 @@
 <html>
 <body>
 <h1>Zephram Carroll</h1>
-<p>HW 1. Keyframing</p>
+
+<h2>HW 1. Keyframing</h2>
+<p>Basic Assignment</p>
+<video width="640" height="360" controls>
+	<source src="PoolAnimationBasic.mp4" type="video/mp4">
+Your Browser Does Not Support MP4 Video.
+</video>
+<p>10x Friction Coefficient</p>
+<video width="640" height="360" controls>
+	<source src="PoolAnimationHighFriction.mp4" type="video/mp4">
+Your Browser Does Not Support MP4 Video.
+</video>
+<p>1/3 Restitution</p>
+<video width="640" height="360" controls>
+	<source src="PoolAnimationLowRestitution.mp4" type="video/mp4">
+Your Browser Does Not Support MP4 Video.
+</video>
+
+
+<h2>HW 1. Keyframing</h2>
 <video width="320" height="240" controls>
 	<source src="KeyFraming.mp4" type="video/mp4">
 Your Browser Does Not Support MP4 Video.
 </video>
 
-<p>HW 0. Framework</p>
+<h2>HW 0. Framework</h2>
 <video width="320" height="240" controls>
 	<source src="BoxTurn.mp4" type="video/mp4">
 Your Browser Does Not Support MP4 Video.
