fixed HW2 description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <h1>Zephram Carroll</h1>
 
-<h2>HW 1. Keyframing</h2>
+<h2>HW 2. Physics</h2>
 <p>Basic Assignment</p>
 <video width="640" height="360" controls>
 	<source src="PoolAnimationBasic.mp4" type="video/mp4">
