--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
 <body>
 <h1>Zephram Carroll</h1>
 
+<h2>HW 3. MoCap</h2>
+<p>Waving Skeleton</p>
+<video width="640" height="480" controls>
+	<source src="WaveSkeleton.mp4" type="video/mp4">
+Your Browser Does Not Support MP4 Video.
+</video>
+<p>Sitting Skeleton</p>
+<video width="640" height="480" controls>
+	<source src="SitSkeleton.mp4" type="video/mp4">
+Your Browser Does Not Support MP4 Video.
+</video>
+
 <h2>HW 2. Physics</h2>
 <p>Basic Assignment</p>
 <video width="640" height="360" controls>
