Added Features to Particle System

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 	<source src="ParticleSystem.mp4" type="video/mp4">
 Your Browser Does Not Support MP4 Video.
 </video>
+<p>With Gravity and Particles Bounce off of an invisible floor</p>
+<video width="640" height="480" controls>
+	<source src="ParticleSystemGravity.mp4" type="video/mp4">
+Your Browser Does Not Support MP4 Video.
+</video>
 
 <h2>HW 3. MoCap</h2>
 <p>Waving Skeleton</p>
