--- a/index.html
+++ b/index.html
@@ -1,60 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Zephram Carroll</h1>
 
-<h2>HW 4. ParticleSystem</h2>
-<p>Basic Assignment, Mouse Controls Added</p>
-<video width="640" height="480" controls>
-	<source src="ParticleSystem.mp4" type="video/mp4">
-Your Browser Does Not Support MP4 Video.
-</video>
-<p>With Gravity and Particles Bounce off of an invisible floor</p>
-<video width="640" height="480" controls>
-	<source src="ParticleSystemGravity.mp4" type="video/mp4">
-Your Browser Does Not Support MP4 Video.
-</video>
+<button type="button" onclick="whoIsMyGuy()">Who am I gifting to?</button>
 
-<h2>HW 3. MoCap</h2>
-<p>Waving Skeleton</p>
-<video width="640" height="480" controls>
-	<source src="WaveSkeleton.mp4" type="video/mp4">
-Your Browser Does Not Support MP4 Video.
-</video>
-<p>Sitting Skeleton</p>
-<video width="640" height="480" controls>
-	<source src="SitSkeleton.mp4" type="video/mp4">
-Your Browser Does Not Support MP4 Video.
-</video>
+<h1 id="myGuy">XXXXX</h1>
 
-<h2>HW 2. Physics</h2>
-<p>Basic Assignment</p>
-<video width="640" height="360" controls>
-	<source src="PoolAnimationBasic.mp4" type="video/mp4">
-Your Browser Does Not Support MP4 Video.
-</video>
-<p>10x Friction Coefficient</p>
-<video width="640" height="360" controls>
-	<source src="PoolAnimationHighFriction.mp4" type="video/mp4">
-Your Browser Does Not Support MP4 Video.
-</video>
-<p>1/3 Restitution</p>
-<video width="640" height="360" controls>
-	<source src="PoolAnimationLowRestitution.mp4" type="video/mp4">
-Your Browser Does Not Support MP4 Video.
-</video>
+<script src="ssfetch.js"></script>
 
-
-<h2>HW 1. Keyframing</h2>
-<video width="320" height="240" controls>
-	<source src="KeyFraming.mp4" type="video/mp4">
-Your Browser Does Not Support MP4 Video.
-</video>
-
-<h2>HW 0. Framework</h2>
-<video width="320" height="240" controls>
-	<source src="BoxTurn.mp4" type="video/mp4">
-Your Browser Does Not Support MP4 Video.
-</video>
 </body>
 </html>
