--- a/index.html
+++ b/index.html
@@ -2,9 +2,23 @@
 <html>
 <body>
 
+<input type="text" id="codeInput">
 <button type="button" onclick="whoIsMyGuy()">Who am I gifting to?</button>
 
 <h1 id="myGuy">XXXXX</h1>
+
+<br></br>
+
+<h2>Tools</h2>
+<p>name</p>
+<input type="text" id="name">
+<p>email</p>
+<input type="text" id="email">
+
+<button type="button" onclick="addToList()">Add to list</button>
+
+<br></br>
+<button type="button" onclick="generateSecrets()">Generate Gifters</button>
 
 <script src="ssfetch.js"></script>
 
