--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+	white-space: pre-line;
+</style>
+</head>
 <body>
 
+<p>Enter your code below:</p>
 <input type="text" id="codeInput">
 <button type="button" onclick="whoIsMyGuy()">Who am I gifting to?</button>
 
 <h1 id="myGuy">XXXXX</h1>
+
+<br></br>
+<br></br>
+
+<h3>Rules:</h3>
+<p>
+	1; soft 25 dollar limit. Obey the spirit of the rule. No one should feel like they got a better or worse gift because of how much was spent but if you have a neat gift and something like shipping pushes it over 25, that’s probably okay.
+	2; don’t let the person you know find out you’re their Santa! However with that said, there’s no rules against asking other people for thoughts on what to get them as long as it doesn’t make it back to them. If someone tells you their giftee to ask for help, don’t tell the receiver!
+	3; if you received Lucas or David, you’ll have to mail them your gift. I can either give you their addresses personally or if you want to stay anonymous, you can leave their gift in our front porch with their name on it, and I’ll mail it.
+	4; gift swap will happen on the evening of Dec 18. If you’re a virtual participant, we’ll have a video discord call so you can join the party for the gift exchange part.
+</p>
 
 <br></br>
 
